# DRM-SAINT-G

./: .gitignore  CITATION.cff  CLA.md  CONTRIBUTING.md  COPYRIGHT  LICENSE  LICENSE-COMMERCIAL.md  PRIOR_ART.md  README.md  SECURITY.md  pyproject.toml  requirements-lock.txt  requirements.txt
configs/: drm_autograd_smoke.json  drm_g_marco3_consolidated_linear.json  drm_g_marco3_eval_real_tokens.json  drm_g_marco3_real_tokens.json  drm_g_marco4_eval_linear_progressive_real_tokens.json  drm_g_marco4_eval_progressive_real_tokens.json  drm_g_marco4_linear_progressive_real_tokens.json  drm_g_marco4_progressive_real_tokens.json  drm_g_marco5a_consolidate_linear.json  drm_g_marco5c_full_baselines.json  drm_g_marco5c_phi_variants.json  drm_g_marco5d_second_size.json  huggingface_autograd_smoke.json  huggingface_forward_smoke.json  huggingface_smoke.json
docs/: arquitetura.md  criterios_sucesso_falha.md  glossario_tecnico.md  hipoteses.md  paradigma_SAINT-G.md  paradigma_SAINT.md  paradigma_treino_tradicional.md  roadmap.md
saint/: cli.py
scripts/: analyze_phase16_candidate_efficiency.py  analyze_phase16_ntk_hybrid_score_ablation.py  benchmark_drm_g_marco3.py  benchmark_drm_g_marco4.py  benchmark_drm_g_marco5c.py  benchmark_drm_g_marco5c_phi_variants.py  benchmark_drm_g_marco5d.py  benchmark_drm_g_phase16_5m_graft.py  benchmark_drm_g_phase16_graftblock.py  benchmark_drm_matrices.py  benchmark_huggingface_multiseed_phase13.py  benchmark_huggingface_phase13.py  benchmark_huggingface_phase15_14b.py  benchmark_huggingface_phase15_compare.py  benchmark_linear_phase4.py  (+6 more)
(+178 files in other folders)
