[project]
name = "saint-training"
version = "0.1.0"
description = "Simple AI Node Training experimental runtime"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
hf = [
  "accelerate>=1.12",
  "safetensors>=0.4",
  "tokenizers>=0.15",
  "torch>=2.11",
  "transformers>=5.8.1",
]

[project.scripts]
saint = "saint.cli:main"

[tool.setuptools.packages.find]
include = ["saint*"]
