[project]
name = "saint-g-training"
version = "0.1.0"
description = "SAINT-G experimental runtime for scalable auditable intelligence through neural grafting"
requires-python = ">=3.10"
license = {text = "AGPL-3.0-or-later OR Commercial"}
dependencies = []

[project.optional-dependencies]
hf = [
  "accelerate>=1.12",
  "safetensors>=0.4",
  "tokenizers>=0.15",
  "torch>=2.11",
  "transformers>=5.8.1",
]

[project.scripts]
saint = "saint.cli:main"
saint-g = "saint.cli:main"

[tool.setuptools.packages.find]
include = ["saint*"]
